--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/burhancodes/BlackSapphire.git
-KERNEL_SOURCE_BRANCH=13
-KERNEL_CONFIG=lancelot_defconfig
+KERNEL_SOURCE=https://github.com/SomeEmptyBox/Android_Kernel_Xiaomi_Rosemary_CoreX.git
+KERNEL_SOURCE_BRANCH=s
+KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -12,7 +12,7 @@ EXTRA_CMDS:
 ### DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784e
+CLANG_VERSION=r510928
 
 # GCC
 ENABLE_GCC_ARM64=true
