--- a/config.env
+++ b/config.env
@@ -19,7 +19,7 @@ ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 
 # Configuration
-DISABLE-LTO=false
+DISABLE-LTO=true
 DISABLE_CC_WERROR=false
 
 # AnyKernel3
