--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/SomeEmptyBox/Android-Kernel-Xiaomi-Rosemary-CoreX.git
-KERNEL_SOURCE_BRANCH=main
+KERNEL_SOURCE=https://github.com/rosemaryuser/android_kernel_xiaomi_mtk.git
+KERNEL_SOURCE_BRANCH=s
 KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
