--- a/config.env
+++ b/config.env
@@ -25,8 +25,8 @@ DISABLE_CC_WERROR=false
 # AnyKernel3
 ## AnyKernel3 Custom
 USE_CUSTOM_ANYKERNEL3=true
-CUSTOM_ANYKERNEL3_SOURCE=https://github.com/SomeEmptyBox/AnyKernel3.git
-CUSTOM_ANYKERNEL3_BRANCH=Rosemary
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/rosemary/AnyKernel3.git
+CUSTOM_ANYKERNEL3_BRANCH=master
 
 # Ccache
 ENABLE_CCACHE=true
