--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/silont-project/kernel_xiaomi_rosemary.git
+KERNEL_SOURCE=https://github.com/rosemaryuser/silont_rosemary.git
 KERNEL_SOURCE_BRANCH=saponaria-r3
 KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
@@ -19,13 +19,13 @@ ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 
 # Configuration
-DISABLE-LTO=true 
+DISABLE-LTO=false
 DISABLE_CC_WERROR=false
 
 # AnyKernel3
 ## AnyKernel3 Custom
 USE_CUSTOM_ANYKERNEL3=true
-CUSTOM_ANYKERNEL3_SOURCE=https://github.com/rosemary/AnyKernel3.git
+CUSTOM_ANYKERNEL3_SOURCE=https://github.com/rosemaryuser/AnyKernel3.git
 CUSTOM_ANYKERNEL3_BRANCH=master
 
 # Ccache
