--- a/config.env
+++ b/config.env
@@ -6,11 +6,9 @@ KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:
+EXTRA_CMDS:LLVM=1 LLVM_IAS=1 LD=ld.lld NM=llvm-nm AR=llvm-ar OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump
 
 # Clang
-### DO NOT CHANGE CUSTOM CMDS
-CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
 CLANG_BRANCH=master-kernel-build-2022
 CLANG_VERSION=r510928
 
