--- a/config.env
+++ b/config.env
@@ -8,6 +8,10 @@ ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
 EXTRA_CMDS:LLVM=1 LLVM_IAS=1 LD=ld.lld NM=llvm-nm AR=llvm-ar OBJCOPY=llvm-objcopy OBJDUMP=llvm-objdump
 
+# Clang
+### DO NOT CHANGE CUSTOM CMDS
+CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
+
 # GCC
 ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
