--- a/config.env
+++ b/config.env
@@ -1,18 +1,15 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/rosemaryuser/android_kernel_xiaomi_mtk.git
-KERNEL_SOURCE_BRANCH=s
+KERNEL_SOURCE=https://github.com/rosemaryuser/android_kernel_xiaomi_evolution.git
+KERNEL_SOURCE_BRANCH=Miui-v2
 KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
-ADD_LOCALVERSION_TO_FILENAME=false
-EXTRA_CMDS:
+EXTRA_CMDS:LD=ld.lld AS=llvm-as AR=llvm-ar NM=llvm-nm OBJCOPY=llvm-objcopy
 
 # Clang
 ### DO NOT CHANGE CUSTOM CMDS
 CUSTOM_CMDS:CLANG_TRIPLE=aarch64-linux-gnu-
-CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r510928
 
 # GCC
 ENABLE_GCC_ARM64=true
@@ -20,7 +17,6 @@ ENABLE_GCC_ARM32=true
 
 # Configuration
 DISABLE-LTO=true
-DISABLE_CC_WERROR=false
 
 # AnyKernel3
 ## AnyKernel3 Custom
