--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -46,12 +46,10 @@ jobs:
         sudo apt-get install git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python2 python3 zstd
         mkdir -p ${{ github.workspace }}/kernel_workspace
 
-    - name: Download ZyC-Clang
+    - name: Download Aosp-Clang
       run: |
         cd ${{ github.workspace }}/kernel_workspace
-        mkdir clang-aosp
-        wget https://github.com/ZyCromerZ/Clang/releases/download/20.0.0git-20241104-release/Clang-20.0.0git-20241104.tar.gz
-        tar -C clang-aosp/ -zxvf Clang-20.0.0git-20241104.tar.gz
+        git clone --depth=1 https://github.com/rosemaryuser/android_prebuilts_clang_host_linux-x86_clang-6443078.git -b 11.0 clang-aosp
 
     - name: Download GCC-AOSP
       run: |
@@ -124,14 +122,14 @@ jobs:
         fi
         cp android-kernel/out/arch/${{ env.ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} AnyKernel3/
         cd ${{ github.workspace }}/kernel_workspace/AnyKernel3
-        zip -r9 SilontT-${{ env.DEVICE }}.zip -- *
+        zip -r9 Evolution-${{ env.DEVICE }}.zip -- *
         
     - name: Upload to Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
          ${{ github.workspace }}/kernel_workspace/AnyKernel3/*.zip
-        name: SilonT-${{ env.DEVICE }}
+        name: Evolution-${{ env.DEVICE }}
         tag_name: ${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
