--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ ENABLE_GCC_ARM64=true
 ENABLE_GCC_ARM32=true
 
 # Configuration
-DISABLE-LTO=true
+DISABLE-LTO=false
 
 # AnyKernel3
 ## AnyKernel3 Custom
@@ -27,5 +27,3 @@ CUSTOM_ANYKERNEL3_BRANCH=master
 # Ccache
 ENABLE_CCACHE=true
 
-# DTBO image
-NEED_DTBO=false 
