--- a/.github/workflows/build-kernel-neutronclang.yml
+++ b/.github/workflows/build-kernel-neutronclang.yml
@@ -50,10 +50,10 @@ jobs:
         sudo apt-get install git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python2 python3 zstd
         mkdir -p ${{ github.workspace }}/kernel_workspace
 
-    - name: Download Aosp-Clang
+    - name: Download Neutron-Clang
       run: |
         cd ${{ github.workspace }}/kernel_workspace
-        git clone --depth=1 https://github.com/rosemaryuser/android_prebuilts_clang_host_linux-x86_clang-6443078.git -b 11.0 clang-aosp
+        bash <(curl -s "https://raw.githubusercontent.com/Neutron-Toolchains/antman/main/antman") -S
 
     - name: Download GCC-AOSP
       run: |
@@ -94,7 +94,7 @@ jobs:
     - name: Build kernel
       run: |
         cd ${{ github.workspace }}/kernel_workspace/android-kernel
-        export PATH=${{ github.workspace }}/kernel_workspace/clang-aosp/bin:$PATH
+        export PATH=${{ github.workspace }}/kernel_workspace/bin:$PATH
         KBUILD_BUILD_USER="NYO"
         KBUILD_BUILD_HOST="CI"
         make -j$(nproc --all) CC=clang O=out ARCH=${{ env.ARCH }} ${{ env.CUSTOM_CMDS }} ${{ env.EXTRA_CMDS }} ${{ env.GCC_64 }} ${{ env.GCC_32 }} ${{ env.KERNEL_CONFIG }}
