--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https:https://github.com/rosemaryuser/android_kernel_xiaomi_rosemary.git
+KERNEL_SOURCE=https://github.com/rosemaryuser/android_kernel_xiaomi_rosemary.git
 KERNEL_SOURCE_BRANCH=13.0
 KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
