--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/rosemaryuser/android_kernel_xiaomi_evolution.git
-KERNEL_SOURCE_BRANCH=Miui-v2
+KERNEL_SOURCE=https://github.com/rosemaryuser/MeowX-R.git
+KERNEL_SOURCE_BRANCH=13.0
 KERNEL_CONFIG=rosemary_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
