--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -82,6 +82,7 @@ jobs:
         cd ${{ github.workspace }}/kernel_workspace/android-kernel
           if [ ${{ inputs.ENABLE_LTO }} == true ]; then
             echo "CONFIG_LTO_CLANG=y" >> arch/${{ env.ARCH }}/configs/${{ env.KERNEL_CONFIG }} 
+            echo "NAME_LTO=LTO" >> $GITHUB_ENV
           fi
 
     - name: Setup ccache
@@ -123,14 +124,14 @@ jobs:
         fi
         cp android-kernel/out/arch/${{ env.ARCH }}/boot/${{ env.KERNEL_IMAGE_NAME }} AnyKernel3/
         cd ${{ github.workspace }}/kernel_workspace/AnyKernel3
-        zip -r9 Evolution-${{ env.DEVICE }}.zip -- *
+        zip -r9 MeowX-${{ env.NAME_LTO }}-${{ env.DEVICE }}.zip -- *
         
     - name: Upload to Release
       uses: softprops/action-gh-release@v2
       with:
         files: |
          ${{ github.workspace }}/kernel_workspace/AnyKernel3/*.zip
-        name: Evolution-${{ env.DEVICE }}
+        name: MeowX-${{ env.DEVICE }}
         tag_name: ${{ github.run_id }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
